--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<hi> Hello Coursera! </hi>
+<hi> Hello Coursera! Testing Changes</hi>
 <hi> Hello Coursera! </hi>
 </body>
 </html>
